[package]
name = "oj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
env_logger = "0.10.0"
log = "0.4.19"
clap = { version = "4.3.10", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json="1.0.96"
chrono="0.4.26"
wait-timeout="0.2.0"
rusqlite="0.29.0"
r2d2="0.8.10"
r2d2_sqlite="0.22.0"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
[dev-dependencies]
assert-json-diff = "2.0.2"
lazy_static = "1.4.0"
pretty_assertions = "1.3.0"
serde_json = "1.0.96"
serde = { version = "1.0.164", features = ["derive"] }

